A/A.006/2-1.prometheus-server.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: prometheus-stack-kube-prom-prometheus
  namespace: monitoring
  labels:
    app: kube-prometheus-stack-prometheus
    self-monitor: "true"
    
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: prometheus-stack
    app.kubernetes.io/version: "39.9.0"
    app.kubernetes.io/part-of: kube-prometheus-stack
    chart: kube-prometheus-stack-39.9.0
    release: "prometheus-stack"
    heritage: "Helm"
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http-web
    port: 80
    targetPort: 9090
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/name: prometheus
    prometheus: prometheus-stack-kube-prom-prometheus
  type: "LoadBalancer"
---
